--- a/dashboard.html
+++ b/dashboard.html
@@ -22,6 +22,11 @@ body {
     align-items: center;
     height: 100vh;
   }
+  #message {
+    margin: 0;
+    
+  }
+
   
   .container {
     background-color: #fff;
@@ -96,7 +101,7 @@ body {
     </style>
   <div class="dashboard-container">
     <h1>Dashboard</h1>
-    <p class="dashboard-message" id="dashboardMessage"></p>
+    <p class="dashboard-message" id="message"></p>
     <button class="logout-button" onclick="logout()">Logout</button>
     <script src="dashboard.js"></script>
   </div>
